2007-03-06  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: added 1.4.0 entry.

	* src/rb_cairo_context.c (cr_get_scaled_font): checked cairo
	version.

	* setup.rb: removed dependency on setup.rb. used Ruby-GNOME2
	style.

	* extconf.rb: moved from packages/cairo/ext/.

	* packages/cairo/ext: move to ...
	* src/: ... here.

	* packages/cairo/lib: move to ...
	* src/lib: ... here.

	* README, samples/: followed the changes.

2007-03-03  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: supported cairo 1.3.16.

	* packages/cairo/ext/rb_cairo.h: cleanup.

	* packages/cairo/ext/rb_cairo_scaled_font.c
	(rb_cairo_scaled_font_to_ruby_object): fixed a conversion bug.

	* packages/cairo/ext/rb_cairo_constants.c
	(Cairo::SURFACE_TYPE_OS2): added.

2007-02-25  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/lib/cairo.rb: supported Ruby-GNOME2 GUI Installer
	for Win32.
	Thanks to Masao Mutoh!

2007-02-04  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_surface.c: the first argument of
	Cairo::ImageSurface#initialize, cairo_format_t, is optional.
	* samples/*.rb: followed the change.

2007-01-21  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: supported cairo 1.3.12.

2007-01-08  Kouhei Sutou  <kou@cozmixng.org>

	* samples/text2.rb (render_layout): used
	Pango::LayoutIter#line_extents and Pango::LayoutIter#line_yrange.

2007-01-02  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: cached Ruby object for
	source.

2007-01-01  Kouhei Sutou  <kou@cozmixng.org>

	* samples/text2.rb: used Pango::LayoutIter.

2006-12-30  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_pattern.c: Cairo::GradientPattern#[]
	-> Cairo::GradientPattern#get_color_stop.

2006-12-29  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: keep reference of Ruby
	object for the surface in the context.

	* packages/cairo/ext/rb_cairo_surface.c: